# adventofcode-2021

./: .gitignore  README.adoc  pyproject.toml
.github/workflows/: build.yml
aoc21/: __main__.py
output/: 10b.txt  13b.txt  16b.txt  2a.txt  2b.txt  3a.txt  3b.txt  6b.txt  9b.txt
solutions/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
tests/: test_solutions.py
